--- a/style.css
+++ b/style.css
@@ -253,3 +253,14 @@
   flex-direction: column;
   gap: 10px;
 }
+.card-logo {
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  width: 270px;
+  height: 120px;
+}
+.svg {
+  width: 70px;
+  height: 70px;
+  padding: 25px 102px;
+}
